--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  font-family: "Roboto";
-  list-style: none;
-  box-sizing: border-box;
-  background: #000;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+	font-family: "Roboto";
+	list-style: none;
+	box-sizing: border-box;
+	background: #000;
 }
-
+/* 
 nav {
   position: fixed;
   z-index: 100;
@@ -37,246 +37,908 @@ nav .nav-links ul li {
 
 nav .nav-links ul li img {
   transform: scale(0.45);
-}
+} */
 
 section {
-  height: 100vh;
-  overflow: hidden;
+	height: 100vh;
+	overflow: hidden;
 }
 
 .bg img {
-  width: 110vw;
-  height: 110vh;
-  filter: brightness(0.6);
+	width: 110vw;
+	height: 110vh;
+	filter: brightness(0.6);
 }
 
 .rock1 {
-  position: absolute !important;
-  left: 10vw !important;
-  top: 20vh !important;
+	position: absolute !important;
+	left: 10vw !important;
+	top: 20vh !important;
 }
 
 .rock1 img {
-  width: 40%;
-  filter: brightness(0.5);
+	width: 40%;
+	filter: brightness(0.5);
 }
 
 .text h1 {
-  font-family: "AlphaCentauri" !important;
-  font-size: 5vw;
-  color: #fff;
-  letter-spacing: 20px;
-  position: absolute;
-  top: 35vh;
-  left: 34vw;
+	font-family: "AlphaCentauri" !important;
+	font-size: 5vw;
+	color: #fff;
+	letter-spacing: 20px;
+	position: absolute;
+	top: 35vh;
+	left: 34vw;
 }
 
 .earth img {
-  width: 400px;
-  height: 400px;
-  position: absolute;
-  left: 34vw;
-  top: 25vh;
-  z-index: 1;
-  filter: brightness(0.7);
+	width: 400px;
+	height: 400px;
+	position: absolute;
+	left: 34vw;
+	top: 25vh;
+	z-index: 1;
+	filter: brightness(0.7);
 }
 
 .mid {
-  left: -150px !important;
-  bottom: -100px !important;
-  top: unset !important;
+	left: -150px !important;
+	bottom: -100px !important;
+	top: unset !important;
 }
 
 .mid img {
-  width: 100%;
-  z-index: 2;
-  left: -20px;
-  top: 20vh !important;
-  filter: brightness(0.8);
+	width: 100%;
+	z-index: 2;
+	left: -20px;
+	top: 20vh !important;
+	filter: brightness(0.8);
 }
 
 .fore {
-  right: -50px !important;
-  bottom: -200px !important;
-  top: 0px !important;
-  left: unset !important;
+	right: -50px !important;
+	bottom: -200px !important;
+	top: 0px !important;
+	left: unset !important;
 }
 
 .fore img {
-  width: 400px;
-  height: 110vh;
-  z-index: 3;
-  filter: brightness(0.5);
+	width: 400px;
+	height: 110vh;
+	z-index: 3;
+	filter: brightness(0.5);
 }
 
 /* SWIPER */
 
 #sectiontwo {
-  width: 100%;
-  height: 100vh;
-  position: relative;
+	width: 100%;
+	height: 100vh;
+	position: relative;
 }
 
 .rockbg1 {
-  position: absolute;
-  transform: scale(0.2);
-  filter: brightness(0.2);
-  top: 20vh;
-  left: 0;
-  z-index: 1;
+	position: absolute;
+	transform: scale(0.2);
+	filter: brightness(0.2);
+	top: 20vh;
+	left: 0;
+	z-index: 1;
 }
 
 .planet-links {
-  width: 95%;
-  height: 5vh;
-  color: #fff;
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  justify-content: space-evenly;
-  list-style: none;
+	width: 95%;
+	height: 5vh;
+	color: #fff;
+	position: absolute;
+	bottom: 0;
+	display: flex;
+	justify-content: space-evenly;
+	list-style: none;
 }
 
 .planet-links .swiper-pagination-bullet {
-  opacity: 0.2;
-  outline: none;
+	opacity: 0.2;
+	outline: none;
 }
 .planet-links .swiper-pagination-bullet-active {
-  color: #fff;
-  opacity: 1;
+	color: #fff;
+	opacity: 1;
 }
 
 .swiper-pagination-clickable .swiper-pagination-bullet {
-  background: transparent;
+	background: transparent;
 }
 
 .swiper-container {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 50px 0;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	padding: 50px 0;
 }
 
 .swiper-wrapper {
-  transition-delay: 0.5s;
+	transition-delay: 0.5s;
 }
 
 .swiper-slide {
-  height: 400px !important;
-  width: 90% !important;
-  background: transparent;
+	height: 400px !important;
+	width: 90% !important;
+	background: transparent;
 }
 
 .swiper-slide:nth-child(1) .slide-img {
-  background-image: url("images/mercury.png");
+	background-image: url("images/mercury.png");
 }
 .swiper-slide:nth-child(2) .slide-img {
-  background-image: url("images/venus.png");
+	background-image: url("images/venus.png");
 }
 .swiper-slide:nth-child(3) .slide-img {
-  background-image: url("images/earth1.png");
+	background-image: url("images/earth1.png");
 }
 .swiper-slide:nth-child(4) .slide-img {
-  background-image: url("images/mars.png");
+	background-image: url("images/mars.png");
 }
 .swiper-slide:nth-child(5) .slide-img {
-  background-image: url("images/jupiter.png");
+	background-image: url("images/jupiter.png");
 }
 .swiper-slide:nth-child(6) .slide-img {
-  background-image: url("images/saturn.png");
+	background-image: url("images/saturn.png");
 }
 .swiper-slide:nth-child(7) .slide-img {
-  background-image: url("images/uranus.png");
+	background-image: url("images/uranus.png");
 }
 .swiper-slide:nth-child(8) .slide-img {
-  background-image: url("images/neptune.png");
+	background-image: url("images/neptune.png");
 }
 
 .slide-img {
-  background-position: "center";
-  background-repeat: no-repeat !important;
-  background-size: contain;
-  width: 30%;
-  height: 100%;
+	background-position: "center";
+	background-repeat: no-repeat !important;
+	background-size: contain;
+	width: 30%;
+	height: 100%;
 }
 
 .slide-number {
-  position: absolute;
-  top: -30px;
-  left: 30%;
-  width: 200px;
-  height: 120px;
-  overflow: hidden;
-  z-index: 10;
+	position: absolute;
+	top: -30px;
+	left: 30%;
+	width: 200px;
+	height: 120px;
+	overflow: hidden;
+	z-index: 10;
 }
 
 .slide-number p {
-  font-size: 40px;
-  font-family: "AlphaCentauri" !important;
-  color: #fff;
-  position: relative;
+	font-size: 40px;
+	font-family: "AlphaCentauri" !important;
+	color: #fff;
+	position: relative;
 }
 
 .slide-number p span {
-  position: absolute;
+	position: absolute;
 }
 
 .slide-detail {
-  position: absolute;
-  top: 130px;
-  left: 30%;
-  z-index: 10;
-  width: 50%;
-  height: 400px;
-  overflow: hidden;
+	position: absolute;
+	top: 130px;
+	left: 30%;
+	z-index: 10;
+	width: 50%;
+	height: 400px;
+	overflow: hidden;
 }
 
 .slide-detail p {
-  font-size: 14px;
-  color: #fff;
-  position: relative;
-  opacity: 0.8;
-  line-height: 30px;
+	font-size: 14px;
+	color: #fff;
+	position: relative;
+	opacity: 0.8;
+	line-height: 30px;
 }
 
 .slide-detail p span {
-  position: absolute;
+	position: absolute;
 }
 
 .slide-detail-facts {
-  position: absolute;
-  top: 240px;
-  left: 30%;
-  z-index: 10;
-  width: 50%;
-  height: 400px;
-  overflow: hidden;
-  color: #fff;
+	position: absolute;
+	top: 240px;
+	left: 30%;
+	z-index: 10;
+	width: 50%;
+	height: 400px;
+	overflow: hidden;
+	color: #fff;
 }
 .slide-detail-facts div {
-  display: flex;
-  position: relative;
+	display: flex;
+	position: relative;
 }
 .slide-detail-facts div h5 {
-  margin-right: 20px;
+	margin-right: 20px;
 }
 
 .slide-text {
-  position: absolute;
-  top: -150px;
-  left: 22%;
-  z-index: 9;
-  width: 200px;
-  height: 400px;
-  overflow: hidden;
-  opacity: 0.1 !important;
+	position: absolute;
+	top: -150px;
+	left: 22%;
+	z-index: 9;
+	width: 200px;
+	height: 400px;
+	overflow: hidden;
+	opacity: 0.1 !important;
 }
 
 .slide-text h4 {
-  color: #fff;
-  font-size: 100px;
-  position: relative;
+	color: #fff;
+	font-size: 100px;
+	position: relative;
 }
 .slide-text h4 span {
-  position: absolute;
+	position: absolute;
+}
+.nav {
+	width: 100%;
+	height: 65px;
+	position: fixed;
+	line-height: 65px;
+	text-align: center;
+}
+
+.nav div.logo {
+	float: left;
+	width: auto;
+	height: auto;
+	padding-left: 3rem;
+}
+
+.nav div.logo a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 2.5rem;
+}
+
+.nav div.logo a:hover {
+	color: #00e676;
+}
+
+.nav div.main_list {
+	height: 65px;
+	float: right;
+}
+
+.nav div.main_list ul {
+	width: 100%;
+	height: 65px;
+	display: flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.nav div.main_list ul li {
+	width: auto;
+	height: 65px;
+	padding: 0;
+	padding-right: 3rem;
+}
+
+.nav div.main_list ul li a {
+	text-decoration: none;
+	color: #fff;
+	line-height: 65px;
+	font-size: 2.4rem;
+}
+
+.nav div.main_list ul li a:hover {
+	color: #00e676;
+}
+
+/* Home section */
+
+.navTrigger {
+	display: none;
+}
+
+.nav {
+	padding-top: 20px;
+	padding-bottom: 20px;
+	-webkit-transition: all 0.4s ease;
+	transition: all 0.4s ease;
+	z-index: 100;
+}
+
+/* Media qurey section */
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	.container {
+		margin: 0;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.navTrigger {
+		display: block;
+	}
+	.nav div.logo {
+		margin-left: 15px;
+	}
+	.nav div.main_list {
+		width: 100%;
+		height: 0;
+		overflow: hidden;
+	}
+	.nav div.show_list {
+		height: auto;
+		display: none;
+	}
+	.nav div.main_list ul {
+		flex-direction: column;
+		width: 100%;
+		height: 100vh;
+		right: 0;
+		left: 0;
+		bottom: 0;
+		background-color: #111;
+		/*same background color of navbar*/
+		background-position: center top;
+	}
+	.nav div.main_list ul li {
+		width: 100%;
+		text-align: right;
+	}
+	.nav div.main_list ul li a {
+		text-align: center;
+		width: 100%;
+		font-size: 3rem;
+		padding: 20px;
+	}
+	.nav div.media_button {
+		display: block;
+	}
+}
+
+/* Animation */
+/* Inspiration taken from Dicson https://codemyui.com/simple-hamburger-menu-x-mark-animation/ */
+
+.navTrigger {
+	cursor: pointer;
+	width: 30px;
+	height: 25px;
+	margin: auto;
+	position: absolute;
+	right: 30px;
+	top: 0;
+	bottom: 0;
+}
+
+.navTrigger i {
+	background-color: #fff;
+	border-radius: 2px;
+	content: "";
+	display: block;
+	width: 100%;
+	height: 4px;
+}
+
+.navTrigger i:nth-child(1) {
+	-webkit-animation: outT 0.8s backwards;
+	animation: outT 0.8s backwards;
+	-webkit-animation-direction: reverse;
+	animation-direction: reverse;
+}
+
+.navTrigger i:nth-child(2) {
+	margin: 5px 0;
+	-webkit-animation: outM 0.8s backwards;
+	animation: outM 0.8s backwards;
+	-webkit-animation-direction: reverse;
+	animation-direction: reverse;
+}
+
+.navTrigger i:nth-child(3) {
+	-webkit-animation: outBtm 0.8s backwards;
+	animation: outBtm 0.8s backwards;
+	-webkit-animation-direction: reverse;
+	animation-direction: reverse;
+}
+
+.navTrigger.active i:nth-child(1) {
+	-webkit-animation: inT 0.8s forwards;
+	animation: inT 0.8s forwards;
+}
+
+.navTrigger.active i:nth-child(2) {
+	-webkit-animation: inM 0.8s forwards;
+	animation: inM 0.8s forwards;
+}
+
+.navTrigger.active i:nth-child(3) {
+	-webkit-animation: inBtm 0.8s forwards;
+	animation: inBtm 0.8s forwards;
+}
+
+@-webkit-keyframes inM {
+	50% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(45deg);
+	}
+}
+
+@keyframes inM {
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(45deg);
+	}
+}
+
+@-webkit-keyframes outM {
+	50% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(45deg);
+	}
+}
+
+@keyframes outM {
+	50% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(45deg);
+	}
+}
+
+@-webkit-keyframes inT {
+	0% {
+		-webkit-transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		-webkit-transform: translateY(9px) rotate(0deg);
+	}
+	100% {
+		-webkit-transform: translateY(9px) rotate(135deg);
+	}
+}
+
+@keyframes inT {
+	0% {
+		transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		transform: translateY(9px) rotate(0deg);
+	}
+	100% {
+		transform: translateY(9px) rotate(135deg);
+	}
+}
+
+@-webkit-keyframes outT {
+	0% {
+		-webkit-transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		-webkit-transform: translateY(9px) rotate(0deg);
+	}
+	100% {
+		-webkit-transform: translateY(9px) rotate(135deg);
+	}
+}
+
+@keyframes outT {
+	0% {
+		transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		transform: translateY(9px) rotate(0deg);
+	}
+	100% {
+		transform: translateY(9px) rotate(135deg);
+	}
+}
+
+@-webkit-keyframes inBtm {
+	0% {
+		-webkit-transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		-webkit-transform: translateY(-9px) rotate(0deg);
+	}
+	100% {
+		-webkit-transform: translateY(-9px) rotate(135deg);
+	}
+}
+
+@keyframes inBtm {
+	0% {
+		transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		transform: translateY(-9px) rotate(0deg);
+	}
+	100% {
+		transform: translateY(-9px) rotate(135deg);
+	}
+}
+
+@-webkit-keyframes outBtm {
+	0% {
+		-webkit-transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		-webkit-transform: translateY(-9px) rotate(0deg);
+	}
+	100% {
+		-webkit-transform: translateY(-9px) rotate(135deg);
+	}
+}
+
+@keyframes outBtm {
+	0% {
+		transform: translateY(0px) rotate(0deg);
+	}
+	50% {
+		transform: translateY(-9px) rotate(0deg);
+	}
+	100% {
+		transform: translateY(-9px) rotate(135deg);
+	}
+}
+
+.affix {
+	padding: 0;
+	background-color: #111;
+}
+
+.myH2 {
+	text-align: center;
+	font-size: 4rem;
+}
+.myP {
+	text-align: justify;
+	padding-left: 15%;
+	padding-right: 15%;
+	font-size: 20px;
+}
+@media all and (max-width: 700px) {
+	.myP {
+		padding: 2%;
+	}
+}
+a {
+	color: #555;
+	text-decoration: none;
+}
+.container {
+	width: 100%;
+	position: relative;
+}
+.clr {
+	clear: both;
+	padding: 0;
+	height: 0;
+	margin: 0;
+}
+.main {
+	width: 60%;
+	margin: 0 auto;
+	position: relative;
+
+	font-family: Cambria, Georgia, serif;
+
+	font-weight: 300;
+	font-size: 15px;
+	color: #333;
+	-webkit-font-smoothing: antialiased;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+.container > header {
+	margin: 10px;
+	padding: 20px 10px 10px 10px;
+	position: relative;
+	display: block;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	text-align: center;
+}
+.container > header h1 {
+	font-size: 32px;
+	line-height: 32px;
+	margin: 0;
+	position: relative;
+	font-weight: 300;
+	color: #777;
+	text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.7);
+}
+.container > header h2 {
+	font-size: 14px;
+	font-weight: 300;
+	font-style: italic;
+	margin: 0;
+	padding: 15px 0 5px 0;
+	color: #888;
+	text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.9);
+}
+/* Header Style */
+.codrops-top {
+	line-height: 24px;
+	font-size: 11px;
+	background: #fff;
+	background: rgba(255, 255, 255, 0.6);
+	text-transform: uppercase;
+	z-index: 9999;
+	position: relative;
+	box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.1);
+}
+.codrops-top a {
+	padding: 0px 10px;
+	letter-spacing: 1px;
+	color: #333;
+	display: inline-block;
+}
+.codrops-top a:hover {
+	background: rgba(255, 255, 255, 0.3);
+}
+.codrops-top span.right {
+	float: right;
+}
+.codrops-top span.right a {
+	float: left;
+	display: block;
+}
+/* Demo Buttons Style */
+.codrops-demos {
+	text-align: center;
+	display: block;
+	line-height: 30px;
+	padding: 5px 0px;
+}
+.codrops-demos a {
+	display: inline-block;
+	font-style: italic;
+	margin: 0px 4px;
+	padding: 0px 6px;
+	color: #aaa;
+	line-height: 20px;
+	font-size: 13px;
+	text-shadow: 1px 1px 1px #fff;
+	border: 1px solid #fff;
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(
+		top,
+		#ffffff 0%,
+		#f6f6f6 47%,
+		#ededed 100%
+	); /* FF3.6+ */
+	background: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0%, #ffffff),
+		color-stop(47%, #f6f6f6),
+		color-stop(100%, #ededed)
+	); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(
+		top,
+		#ffffff 0%,
+		#f6f6f6 47%,
+		#ededed 100%
+	); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(
+		top,
+		#ffffff 0%,
+		#f6f6f6 47%,
+		#ededed 100%
+	); /* Opera 11.10+ */
+	background: -ms-linear-gradient(
+		top,
+		#ffffff 0%,
+		#f6f6f6 47%,
+		#ededed 100%
+	); /* IE10+ */
+	background: linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+.codrops-demos a:hover {
+	color: #333;
+	background: #fff;
+}
+.codrops-demos a:active {
+	background: #fff;
+}
+.codrops-demos a.current-demo,
+.codrops-demos a.current-demo:hover {
+	background: #f0f0f0;
+	border-color: #d9d9d9;
+	color: #aaa;
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#f6f6f6',GradientType=0 ); /* IE6-9 */
+}
+
+.support-note span {
+	color: #ac375d;
+	font-size: 16px;
+	display: none;
+	font-weight: bold;
+	text-align: center;
+	padding: 5px 0;
+}
+.no-cssanimations .support-note span.no-cssanimations,
+.no-csstransforms .support-note span.no-csstransforms,
+.no-csstransforms3d .support-note span.no-csstransforms3d,
+.no-csstransitions .support-note span.no-csstransitions {
+	display: block;
+}
+
+* {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.ch-grid {
+	margin: 20px 0 0 0;
+	padding: 0;
+	list-style: none;
+	display: block;
+	text-align: center;
+	width: 100%;
+}
+
+.ch-grid:after,
+.ch-item:before {
+	content: "";
+	display: table;
+}
+
+.ch-grid:after {
+	clear: both;
+}
+
+.ch-grid li {
+	width: 85px;
+	height: 85px;
+	display: inline-block;
+	margin: 20px;
+}
+
+.ch-item {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	position: relative;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	cursor: default;
+}
+
+.ch-info-wrap,
+.ch-info {
+	width: 85px;
+	height: 85px;
+	border-radius: 50%;
+}
+
+.ch-info-wrap {
+	top: 20px;
+	left: 20px;
+	background: black url(../images/bg.jpg);
+	box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.2),
+		inset 0 0 3px rgba(115, 114, 23, 0.8);
+}
+
+.ch-info > div {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-position: center center;
+
+	-webkit-backface-visibility: hidden;
+}
+
+.ch-info .ch-info-front {
+	-webkit-transition: all 0.6s ease-in-out;
+	-moz-transition: all 0.6s ease-in-out;
+	-o-transition: all 0.6s ease-in-out;
+	-ms-transition: all 0.6s ease-in-out;
+	transition: all 0.6s ease-in-out;
+}
+
+.ch-info .ch-info-back {
+	opacity: 0;
+
+	background: #223e87;
+	pointer-events: none;
+
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	-ms-transform: scale(1.5);
+	transform: scale(1.5);
+
+	-webkit-transition: all 0.4s ease-in-out 0.2s;
+	-moz-transition: all 0.4s ease-in-out 0.2s;
+	-o-transition: all 0.4s ease-in-out 0.2s;
+	-ms-transition: all 0.4s ease-in-out 0.2s;
+	transition: all 0.4s ease-in-out 0.2s;
+}
+
+.ch-img-1 {
+	background-image: url(http://samosoviet.com/Free/CircleHoverEffects/images/1.jpg);
+}
+
+.ch-img-2 {
+	background-image: url(http://samosoviet.com/Free/CircleHoverEffects/images/2.jpg);
+}
+
+.ch-img-3 {
+	background-image: url(http://samosoviet.com/Free/CircleHoverEffects/images/3.jpg);
+}
+
+.ch-info h3 {
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size: 18px;
+	margin: 0 15px;
+	padding: 30px 0 0 0;
+	height: 80px;
+	font-family: "Open Sans", Arial, sans-serif;
+	text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.ch-info p {
+	color: #fff;
+	padding: 5px 5px 5px;
+	font-style: italic;
+	margin: 0 30px;
+	font-size: 12px;
+	border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.ch-info p a {
+	display: block;
+	color: #e7615e;
+	font-style: normal;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 9px;
+	letter-spacing: 1px;
+	padding-top: 4px;
+	font-family: "Open Sans", Arial, sans-serif;
+}
+
+.ch-info p a:hover {
+	color: #fff;
+}
+
+.ch-item:hover .ch-info-front {
+	-webkit-transform: scale(0);
+	-moz-transform: scale(0);
+	-o-transform: scale(0);
+	-ms-transform: scale(0);
+	transform: scale(0);
+
+	opacity: 0;
+}
+
+.ch-item:hover .ch-info-back {
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-o-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+
+	opacity: 1;
+	pointer-events: auto;
 }
