--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	font-family: "Roboto";
 	list-style: none;
 	box-sizing: border-box;
-	background: #000;
+	background: white;
 }
 /* 
 nav {
@@ -152,7 +152,7 @@ section {
 
 .swiper-container {
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	transform: translateY(-50%);
 	padding: 50px 0;
 }
@@ -162,34 +162,34 @@ section {
 }
 
 .swiper-slide {
-	height: 400px !important;
+	height: 600px !important;
 	width: 90% !important;
 	background: transparent;
 }
 
 .swiper-slide:nth-child(1) .slide-img {
-	background-image: url("images/mercury.png");
+	/* background-image: url("images/mercury.png"); */
 }
 .swiper-slide:nth-child(2) .slide-img {
-	background-image: url("images/venus.png");
+	/* background-image: url("images/venus.png"); */
 }
 .swiper-slide:nth-child(3) .slide-img {
-	background-image: url("images/earth1.png");
+	/* background-image: url("images/earth1.png"); */
 }
 .swiper-slide:nth-child(4) .slide-img {
-	background-image: url("images/mars.png");
+	/* background-image: url("images/mars.png"); */
 }
 .swiper-slide:nth-child(5) .slide-img {
-	background-image: url("images/jupiter.png");
+	/* background-image: url("images/jupiter.png"); */
 }
 .swiper-slide:nth-child(6) .slide-img {
-	background-image: url("images/saturn.png");
+	/* background-image: url("images/saturn.png"); */
 }
 .swiper-slide:nth-child(7) .slide-img {
-	background-image: url("images/uranus.png");
+	/* background-image: url("images/uranus.png"); */
 }
 .swiper-slide:nth-child(8) .slide-img {
-	background-image: url("images/neptune.png");
+	/* background-image: url("images/neptune.png"); */
 }
 
 .slide-img {
@@ -283,6 +283,7 @@ section {
 .nav {
 	width: 100%;
 	height: 65px;
+
 	position: fixed;
 	line-height: 65px;
 	text-align: center;
@@ -330,7 +331,7 @@ section {
 	text-decoration: none;
 	color: #fff;
 	line-height: 65px;
-	font-size: 2.4rem;
+	font-size: 2rem;
 }
 
 .nav div.main_list ul li a:hover {
@@ -857,7 +858,7 @@ a {
 .ch-info .ch-info-back {
 	opacity: 0;
 
-	background: #223e87;
+	background: rgba(63, 147, 147, 0.8);
 	pointer-events: none;
 
 	-webkit-transform: scale(1.5);
@@ -941,4 +942,193 @@ a {
 
 	opacity: 1;
 	pointer-events: auto;
+}
+.wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 90%;
+}
+
+.image--cover {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	margin-left: 20px;
+	margin-right: 20px;
+
+	object-fit: cover;
+	object-position: center right;
+}
+.member {
+	width: 90% !important;
+	left: 5% !important;
+	top: 80px !important;
+	display: flex;
+	justify-content: center;
+}
+.member-Name {
+	color: white;
+	line-height: 0 !important;
+	height: 20px;
+	font-size: 20px;
+	margin: 0;
+	margin-top: 20px;
+}
+.member-Name2 {
+	color: white;
+	line-height: 0 !important;
+	height: 20px;
+	font-size: 20px;
+	margin: 0;
+	margin-top: 5px;
+}
+.image-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	/* margin-top:  */
+}
+.achievement {
+	width: 250px !important;
+}
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway:500,700);
+.fill {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+.snip1337 {
+	font-family: "Raleway", Arial, sans-serif;
+	position: relative;
+	overflow: hidden;
+	margin: 10px;
+	min-width: 150px;
+	max-width: 230px;
+	width: 100%;
+	background: #2980b9;
+	text-align: left;
+	color: #ffffff;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+	font-size: 16px;
+}
+.snip1337 * {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
+}
+.snip1337 > img,
+.snip1337 .image img {
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
+	max-width: 100%;
+}
+.snip1337 > img {
+	vertical-align: top;
+	position: relative;
+	-webkit-filter: blur(5px);
+	filter: blur(5px);
+	opacity: 0.7;
+}
+.snip1337 .image {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	overflow: hidden;
+	-webkit-transition-delay: 0.2s;
+	transition-delay: 0.2s;
+}
+.snip1337 .image img {
+	position: absolute;
+	bottom: 0;
+}
+.snip1337 figcaption {
+	opacity: 0;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	right: 20px;
+	/* border-bottom: 2px solid #ffffff; */
+	padding-bottom: 15px;
+	z-index: 1;
+}
+.snip1337 h3,
+.snip1337 p {
+	margin: 0;
+}
+.snip1337 h3 {
+	font-weight: 700;
+	margin-bottom: 5px;
+	text-transform: uppercase;
+}
+.snip1337 p {
+	font-size: 0.9em;
+	letter-spacing: 1px;
+	font-weight: 400;
+}
+.snip1337 .read-more {
+	display: block;
+	opacity: 0;
+	-webkit-transform: translateX(-20px);
+	transform: translateX(-20px);
+	line-height: 48px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	padding: 0 20px;
+	color: #ffffff;
+	right: 0;
+	bottom: 0;
+	font-weight: 500;
+	position: absolute;
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
+.snip1337 a {
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	position: absolute;
+	z-index: 1;
+}
+.snip1337:hover .read-more,
+.snip1337.hover .read-more,
+.snip1337:hover figcaption,
+.snip1337.hover figcaption {
+	opacity: 1;
+	-webkit-transform: translateX(0px);
+	transform: translateX(0px);
+	-webkit-transition-delay: 0.2s;
+	transition-delay: 0.2s;
+}
+.snip1337:hover .image,
+.snip1337.hover .image {
+	top: 100%;
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
+.row-card {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.rows-card-container {
+	display: flex;
+	flex-direction: column;
+}
+.Name {
+	font-size: 20px;
+}
+.my-slogan {
+	font-size: 14px;
+}
+.mySection2 {
+	background-color: black;
 }
