--- a/style.css
+++ b/style.css
@@ -162,7 +162,6 @@ section {
 }
 
 .swiper-slide {
-	height: 600px !important;
 	width: 90% !important;
 	background: transparent;
 }
@@ -331,7 +330,7 @@ section {
 	text-decoration: none;
 	color: #fff;
 	line-height: 65px;
-	font-size: 2rem;
+	font-size: 1.6rem;
 }
 
 .nav div.main_list ul li a:hover {
@@ -1131,4 +1130,122 @@ a {
 }
 .mySection2 {
 	background-color: black;
+}
+
+.box *:last-child {
+	margin-bottom: 0;
+}
+
+.box-4 {
+	box-shadow: 0 10px 10px rgba(255, 0, 0, 0.2);
+	position: relative;
+	width: 70%;
+}
+
+.box-content {
+	background: none repeat scroll 0 0 #ffffff;
+	background-color: #f3f3f3;
+	padding: 25px 55px 45px 55px;
+	position: relative;
+	z-index: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.box-4:after {
+	border-radius: 0 0 50% 50% / 0 0 20px 20px;
+	bottom: 0;
+	box-shadow: 0 20px 20px rgba(255, 0, 0, 0.2);
+	content: "";
+	height: 20px;
+	left: 10px;
+	position: absolute;
+	right: 10px;
+}
+
+.ct-img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 70px;
+	height: auto;
+	/* height: 200px; */
+}
+
+.ct-h2 {
+	text-align: center;
+	font-size: 30px;
+	margin: 0;
+	margin-top: 10px;
+}
+.ct-h1 {
+	margin: 0;
+}
+.ct-h3 {
+	text-align: center;
+	font-size: 20px;
+	margin: 0;
+	margin-top: 10px;
+}
+
+.ct-h4 {
+	text-align: center;
+	font-size: 15px;
+	margin: 0;
+	margin-top: 10px;
+}
+
+.ct-a {
+	text-decoration: none;
+	color: #00c;
+}
+
+/* Whatsapp Floating Button */
+.float {
+	position: fixed;
+	width: 60px;
+	height: 60px;
+	bottom: 40px;
+	right: 40px;
+	background-color: #25d366;
+	color: #fff;
+	border-radius: 50px;
+	text-align: center;
+	font-size: 30px;
+	box-shadow: 2px 2px 3px #999;
+	z-index: 100;
+}
+
+.my-float {
+	margin-top: 16px;
+}
+
+/* Divider */
+.h-divider {
+	margin: auto;
+	margin-top: 80px;
+	width: 80%;
+	position: relative;
+}
+
+.h-divider .shadow {
+	overflow: hidden;
+	height: 20px;
+}
+
+.h-divider .shadow:after {
+	content: "";
+	display: block;
+	margin: -25px auto 0;
+	width: 100%;
+	height: 25px;
+	border-radius: 125px/12px;
+	box-shadow: 0 0 8px black;
+}
+.ctPage {
+	display: flex;
+	align-items: start;
+	/* margin-top: 100px; */
+	margin-bottom: 100px;
+	justify-content: center;
 }
