--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 	box-sizing: border-box;
 	background: white;
 }
+
 /* 
 nav {
   position: fixed;
@@ -45,9 +46,9 @@ section {
 }
 
 .bg img {
-	width: 110vw;
-	height: 110vh;
-	filter: brightness(0.6);
+	width: 100vw;
+	height: 100vh;
+	filter: brightness(0.7);
 }
 
 .rock1 {
@@ -63,12 +64,11 @@ section {
 
 .text h1 {
 	font-family: "AlphaCentauri" !important;
-	font-size: 5vw;
 	color: #fff;
-	letter-spacing: 20px;
+
 	position: absolute;
-	top: 35vh;
-	left: 34vw;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .earth img {
@@ -966,7 +966,7 @@ a {
 	display: flex;
 	justify-content: center;
 }
-.member-Name {
+.member {
 	color: white;
 	line-height: 0 !important;
 	height: 20px;
@@ -1123,10 +1123,19 @@ a {
 	flex-direction: column;
 }
 .Name {
-	font-size: 20px;
+	font-size: 3vw;
+	top: 30%;
 }
 .my-slogan {
-	font-size: 14px;
+	font-size: 2vw;
+	height: auto;
+	top: 40%;
+	font-family: "AlphaCentauri" !important;
+	color: #fff;
+
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 .mySection2 {
 	background-color: black;
@@ -1248,4 +1257,18 @@ a {
 	/* margin-top: 100px; */
 	margin-bottom: 100px;
 	justify-content: center;
+}
+.section1 {
+	background-image: url("/images/Scene\ 1.png");
+	background-size: auto;
+	background-size: 100% 100%;
+	opacity: 0.6;
+}
+.typewrite {
+	text-align: center;
+}
+.wrap {
+	font-size: 30px !important;
+	text-align: center;
+	width: 100%;
 }
